# dolorous

./: .gitignore  Cargo.toml
src/: backup_manager.rs  compressor.rs  configs.rs  main.rs  process.rs  socket.rs
src/backup_manager/: mod.rs
src/process/: event_handlers.rs  mod.rs  run.rs  types.rs
src/tasks/: actions.rs  mod.rs
