[package]
name = "dolorous"
version = "0.1.0"
edition = "2021"
description = "A minecraft server wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive", "env", "cargo"] }
serde = { version = "1.0.147", features = ["derive"] }
humantime-serde = "1.1.1"
figment = { version = "0.10.8", features = ["yaml"] }
serde_yaml = "0.9.14"

color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.23"
humantime = "2.1.0"

globwalk = "0.8.1"
new_string_template = "1.4.0"
flate2 = "1.0.24"
tar = "0.4.38"
zip = "0.6.3"
human_bytes = "0.4.1"
fs_extra = "1.2.0"
