[package]
name = "dolorous"
version = "0.1.0"
edition = "2021"
description = "A minecraft server wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
docker = []

[dependencies]
clap = { version = "4.0.19", features = ["derive", "env", "cargo"] }
serde = { version = "1.0.147", features = ["derive"] }
humantime-serde = "1.1.1"
serde_yaml = "0.9.14"

color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.23"
tokio = { version = "1.21.2", features = ["full"] }

globwalk = "0.8.1"
new_string_template = "1.4.0"
async-compression = { version = "0.3.15", features = ["gzip", "tokio", "futures-io"] }
async_zip = "0.0.9"
tokio-tar = "0.3.0"
human_bytes = "0.4.1"
humantime = "2.1.0"
fs_extra = "1.2.0"
async-trait = "0.1.58"

heapless = "0.7.16"
shell-words = "1.1.0"
parking_lot = "0.12.1"
